--- a/hotels.html
+++ b/hotels.html
@@ -6,15 +6,15 @@
     <meta name="description" content="Поиск гостиниц в Седоне">
     <title>HTML Academy: Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/normalize.min.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="all-content">
 <!-- Header -->
       <header class="main-header">
         <nav class="navigation">
-          <a href="index.html">
+          <a href="index.html" aria-label="Ссылка на главную страницу">
             <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип City of Sedona">
           </a>
           <ul class="navigation__site-navigation">
@@ -37,61 +37,57 @@
       <main>
         <section class="hotels-search-form">
           <h2 class="visually-hidden">Форма поиска</h2>
-          <div class="form-container form-container--infrastructure">
-            <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
-              <h3 class="filter-form__header">Инфраструктура:</h3>
-              <ul  class="filter-form__list">
-                <li class="filter-form__option">
-                  <input class="visually-hidden filter-form__input-checkbox" type="checkbox" name="pool" id="pool" checked>
+          <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
+            <div class="filter-form-part filter-form-part--infrastructure">
+              <h3 class="filter-form-part__header">Инфраструктура:</h3>
+              <ul  class="filter-form-part__list">
+                <li class="filter-form-part__option">
+                  <input class="visually-hidden filter-form-part__input-checkbox" type="checkbox" name="pool" id="pool" checked>
                   <label for="pool">Бассейн</label>
                 </li>
-                <li class="filter-form__option">
-                  <input class="visually-hidden filter-form__input-checkbox" type="checkbox" name="parking" id="parking">
+                <li class="filter-form-part__option">
+                  <input class="visually-hidden filter-form-part__input-checkbox" type="checkbox" name="parking" id="parking">
                   <label for="parking">Парковка</label>
                 </li>
-                <li class="filter-form__option">
-                  <input class="visually-hidden filter-form__input-checkbox" type="checkbox" name="wi-fi" id="wi-fi">
-                  <label for="wi-fi">wi-fi</label>
+                <li class="filter-form-part__option">
+                  <input class="visually-hidden filter-form-part__input-checkbox" type="checkbox" name="wi-fi" id="wi-fi">
+                  <label for="wi-fi">Wi-fi</label>
                 </li>
               </ul>
-            </form>
-          </div>
-          <div class="form-container form-container--residence-type">
-            <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
-              <h3 class="filter-form__header">Тип жилья:</h3>
-              <ul  class="filter-form__list">
-                <li class="filter-form__option">
-                  <input class="visually-hidden filter-form__input-checkbox" type="checkbox" name="hotel" id="hotel" checked>
+            </div>
+            <div class="filter-form-part filter-form-part--residence-type">
+              <h3 class="filter-form-part__header">Тип жилья:</h3>
+              <ul  class="filter-form-part__list">
+                <li class="filter-form-part__option">
+                  <input class="visually-hidden filter-form-part__input-checkbox" type="checkbox" name="hotel" id="hotel" checked>
                   <label for="hotel">Гостиница</label>
                 </li>
-                <li class="filter-form__option">
-                  <input class="visually-hidden filter-form__input-checkbox" type="checkbox" name="motel" id="motel" checked>
+                <li class="filter-form-part__option">
+                  <input class="visually-hidden filter-form-part__input-checkbox" type="checkbox" name="motel" id="motel" checked>
                   <label for="motel">Мотель</label>
                 </li>
-                <li class="filter-form__option">
-                  <input class="visually-hidden filter-form__input-checkbox" type="checkbox" name="apartments" id="apartments" checked>
+                <li class="filter-form-part__option">
+                  <input class="visually-hidden filter-form-part__input-checkbox" type="checkbox" name="apartments" id="apartments" checked>
                   <label for="apartments">Апартаменты</label>
                 </li>
               </ul>
-            </form>
-          </div>
-          <div class="form-container form-container--price-per-day">
-            <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
-              <h3 class="filter-form__header filter-form__header--price-per-day">Стоимость в сутки (р):</h3>
-              <div class="filter-form__price-controls">
-                <label class="filter-form__price">от <input type="text" name="min-price" value="0"></label>
-                <label class="filter-form__price">до <input type="text" name="max-price" value="3000"></label>
+            </div>
+            <div class="filter-form-part filter-form-part--price-per-day">
+              <h3 class="filter-form-part__header filter-form-part__header--price-per-day">Стоимость в сутки (р):</h3>
+              <div class="filter-form-part__price-controls">
+                <label class="filter-form-part__price">от <input type="text" name="min-price" value="0"></label>
+                <label class="filter-form-part__price">до <input type="text" name="max-price" value="3000"></label>
               </div>
-              <div class="filter-form__range-controls">
-                <div class="filter-form__scale">
-                  <div class="filter-form__bar"></div>
+              <div class="filter-form-part__range-controls">
+                <div class="filter-form-part__scale">
+                  <div class="filter-form-part__bar"></div>
                 </div>
-                <div class="filter-form__range-toggle filter-form__range-toggle--min"></div>
-                <div class="filter-form__range-toggle filter-form__range-toggle--max"></div>
+                <div class="filter-form-part__range-toggle filter-form-part__range-toggle--min"></div>
+                <div class="filter-form-part__range-toggle filter-form-part__range-toggle--max"></div>
               </div>
-              <button class="filter-form__button-transparent" type="submit">Показать</button>
-            </form>
-          </div>
+              <button class="filter-form-part__button-transparent" type="submit">Показать</button>
+            </div>
+          </form>
         </section>
         <section class="sorting-panel">
           <h2 class="visually-hidden">Фильтры сортировки</h2>
@@ -100,13 +96,13 @@
             <h3 class="sorting-filters__sorting">Сортировка:</h3>
             <ul class="sorting-filters__list">
               <li class="sorting-filters__item sorting-filters__item--current">
-                <a href="#">По цене</a>
+                <a href="#" aria-label="Сортировка по цене">По цене</a>
               </li>
               <li class="sorting-filters__item">
-                <a href="#">По типу</a>
+                <a href="#" aria-label="Сортировка по типу">По типу</a>
               </li>
               <li class="sorting-filters__item">
-                <a href="#">По рейтингу</a>
+                <a href="#" aria-label="Сортировка по рейтингу">По рейтингу</a>
               </li>
             </ul>
           </div>
@@ -126,15 +122,16 @@
                   </svg>
                 </a>
               </li>
+            </ul>
           </div>
         </section>
         <section class="hotel-search-results">
           <h2 class="visually-hidden">Результаты поиска</h2>
           <ul class="hotels-list">
             <li class="hotels-list-item">
-              <figure class="hotels-list-item__photo-block">
+              <a class="hotels-list-item__photo-block" href="#" aria-label="Ссылка на страницу отеля Amara resort and spa">
                 <img src="img/amara-resort-and-spa.jpg" width="135" height="90" alt="Фотография отеля Amara resort and spa">
-              </figure>
+              </a>
               <div class="hotels-list-item__info-block">
                 <h3 class="hotels-list-item__name">
                   <a href="#">Amara resort &amp; spa</a>
@@ -151,7 +148,7 @@
                 </div>
               </div>
               <div class="hotels-list-item__rating-block">
-                <p class="hotels-list-item__star-container">
+                <p class="hotels-list-item__star-container" aria-label="Рейтинг - 4 звезды">
                   <span class="hotels-list-item__star"></span>
                   <span class="hotels-list-item__star"></span>
                   <span class="hotels-list-item__star"></span>
@@ -161,9 +158,9 @@
               </div>
             </li>
             <li class="hotels-list-item">
-              <figure class="hotels-list-item__photo-block">
+              <a class="hotels-list-item__photo-block" href="#" aria-label="Ссылка на страницу мотеля Desert quail inn">
                 <img src="img/desert-quail-inn.jpg" width="135" height="90" alt="Фотография мотеля Desert quail inn">
-              </figure>
+              </a>
               <div class="hotels-list-item__info-block">
                 <h3 class="hotels-list-item__name">
                   <a href="#">Desert quail inn</a>
@@ -180,7 +177,7 @@
                 </div>
               </div>
               <div class="hotels-list-item__rating-block">
-                <p class="hotels-list-item__star-container">
+                <p class="hotels-list-item__star-container" aria-label="Рейтинг - 3 звезды">
                   <span class="hotels-list-item__star"></span>
                   <span class="hotels-list-item__star"></span>
                   <span class="hotels-list-item__star"></span>
@@ -189,9 +186,9 @@
               </div>
             </li>
             <li class="hotels-list-item">
-              <figure class="hotels-list-item__photo-block">
+              <a class="hotels-list-item__photo-block" href="#" aria-label="Ссылка на страницу апартаментов Villas at poco diablo">
                 <img src="img/villas-at-poco-diablo.jpg" width="135" height="90" alt="Фотография апартаментов Villas at poco diablo">
-              </figure>
+              </a>
               <div class="hotels-list-item__info-block">
                 <h3 class="hotels-list-item__name">
                   <a href="#">Villas at poco diablo</a>
@@ -208,7 +205,7 @@
                 </div>
               </div>
               <div class="hotels-list-item__rating-block">
-                <p class="hotels-list-item__star-container">
+                <p class="hotels-list-item__star-container" aria-label="Рейтинг - 2 звезды">
                   <span class="hotels-list-item__star"></span>
                   <span class="hotels-list-item__star"></span>
                 </p>
@@ -246,7 +243,7 @@
         </ul>
         <p class="footer-copyright">
           <span>Website by</span>
-          <a class="footer-copyright__logo-link" href="https://htmlacademy.ru/intensive/htmlcss">
+          <a class="footer-copyright__logo-link" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Ссылка на страницу Htmlacademy">
             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 113 39">
               <title>logo_name</title>
               <path d="M401.93,351.51a2.07,2.07,0,0,0,.58-0.11v1.4a3.41,3.41,0,0,1-1.24.22,1.75,1.75,0,0,1-1.75-1,5.08,5.08,0,0,1-3.3,1.13c-1.59,0-3.06-.87-3.06-2.68,0-2.24,2.08-2.93,3.9-2.93a11.63,11.63,0,0,1,2.28.26v-0.31c0-1.09-.8-1.86-2.3-1.86a7.79,7.79,0,0,0-3.15.67v-1.79a10.72,10.72,0,0,1,3.35-.58c2.48,0,4,1.18,4,3.83v3.14A0.57,0.57,0,0,0,401.93,351.51Zm-6.76-1.19a1.42,1.42,0,0,0,1.64,1.29,3.56,3.56,0,0,0,2.53-1V349.1a10.21,10.21,0,0,0-1.9-.22C396.34,348.89,395.17,349.23,395.17,350.33Z" transform="translate(-355.09 -323.29)" fill="#fff"/>
