--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="description" content="Седона - небольшой городок в Аризоне, заслуживающий большего">
     <title>HTML Academy: Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/normalize.min.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="all-content">
 <!-- Header -->
       <header class="main-header">
         <nav class="navigation">
-          <a href="index.html">
+          <a href="index.html" >
             <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип City of Sedona">
           </a>
           <ul class="navigation__site-navigation">
@@ -66,7 +66,7 @@
           </ul>
           <div class="single-reason-container">
             <div class="single-reason">
-              <h3>Там есть</br> мост дьявола</h3>
+              <h3>Там есть<br> мост дьявола</h3>
               <p class="single-reason__number">&mdash; №2 &mdash;</p>
               <p class="single-reason__explanation">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </div>
@@ -75,27 +75,24 @@
             <li class="reasons-list__item">
               <h3>Небольшая площадь</h3>
               <p class="reasons-list__number">&mdash; №3 &mdash;</p>
-              <p class="reasons-list__explanation">Все достопримечательности
-находятся очень близко</p>
+              <p class="reasons-list__explanation">Все достопримечательности находятся очень близко</p>
             </li>
             <li class="reasons-list__item">
               <h3>Красивая дорога</h3>
               <p class="reasons-list__number">&mdash; №4 &mdash;</p>
-              <p class="reasons-list__explanation">Ехать в Седону из Лас-Вегаса совсем
-не скучно!</p>
+              <p class="reasons-list__explanation">Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
             </li>
             <li class="reasons-list__item">
               <h3>Мало туристов</h3>
               <p class="reasons-list__number">&mdash; №5 &mdash;</p>
-              <p class="reasons-list__explanation">Большинство едет в Гранд Каньон
-и толпится там</p>
+              <p class="reasons-list__explanation">Большинство едет в&nbsp;гранд каньон и&nbsp;толпится там</p>
             </li>
           </ul>
         </section>
         <section class="hotel-search">
           <h2 class="visually-hidden">Поиск гостиницы</h2>
           <b class="hotel-search__bold-text">Заинтересовались?</b>
-          <p class="hotel-search__what-to-do">Укажите предполагаемые даты поездки,</br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
+          <p class="hotel-search__what-to-do">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
           <button class="hotel-search__open-search-button" type="button">Поиск гостиницы в Седоне</button>
         </section>
         <div class="map-and-modal">
@@ -130,17 +127,17 @@
               <div class="clients-number">
                 <label class="clients-number__label" for="number-of-adults">Взрослые:</label>
                 <div class="clients-number__container">
-                  <button class="clients-number__count-button clients-number__count-button--minus" type="button">Минус</button>
+                  <button class="clients-number__count-button clients-number__count-button--minus" type="button">Уменьшить количество</button>
                   <input id="number-of-adults" type="text" name="number-of-adults" value="" placeholder="2">
-                  <button class="clients-number__count-button clients-number__count-button--plus" type="button">Плюс</button>
+                  <button class="clients-number__count-button clients-number__count-button--plus" type="button">Увеличить количество</button>
                 </div>
               </div>
               <div class="clients-number">
                 <label class="clients-number__label clients-number__label--align-right" for="number-of-children">Дети:</label>
                 <div class="clients-number__container">
-                  <button class="clients-number__count-button clients-number__count-button--minus" type="button">Минус</button>
+                  <button class="clients-number__count-button clients-number__count-button--minus" type="button">Уменьшить количество</button>
                   <input id="number-of-children" type="text" name="number-of-children" value="" placeholder="0">
-                  <button class="clients-number__count-button clients-number__count-button--plus" type="button">Плюс</button>
+                  <button class="clients-number__count-button clients-number__count-button--plus" type="button">Увеличить количество</button>
                 </div>
               </div>
               <button class="submit-search-button" type="submit">Найти</button>
@@ -176,7 +173,7 @@
         </ul>
         <p class="footer-copyright">
           <span>Website by</span>
-          <a class="footer-copyright__logo-link" href="https://htmlacademy.ru/intensive/htmlcss">
+          <a class="footer-copyright__logo-link" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Ссылка на страницу Htmlacademy">
             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 113 39">
               <title>logo_name</title>
               <path d="M401.93,351.51a2.07,2.07,0,0,0,.58-0.11v1.4a3.41,3.41,0,0,1-1.24.22,1.75,1.75,0,0,1-1.75-1,5.08,5.08,0,0,1-3.3,1.13c-1.59,0-3.06-.87-3.06-2.68,0-2.24,2.08-2.93,3.9-2.93a11.63,11.63,0,0,1,2.28.26v-0.31c0-1.09-.8-1.86-2.3-1.86a7.79,7.79,0,0,0-3.15.67v-1.79a10.72,10.72,0,0,1,3.35-.58c2.48,0,4,1.18,4,3.83v3.14A0.57,0.57,0,0,0,401.93,351.51Zm-6.76-1.19a1.42,1.42,0,0,0,1.64,1.29,3.56,3.56,0,0,0,2.53-1V349.1a10.21,10.21,0,0,0-1.9-.22C396.34,348.89,395.17,349.23,395.17,350.33Z" transform="translate(-355.09 -323.29)" fill="#fff"/>
@@ -196,6 +193,6 @@
         </p>
       </footer>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
